# obs-hang

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
src/: audio-decoder.c  hang-source.c  hang-source.h  nvdec-decoder.c  plugin-main.c  vaapi-decoder.c  vaapi-decoder.h
